--- a/docker-compose-local.yaml
+++ b/docker-compose-local.yaml
@@ -12,18 +12,55 @@ services:
       - "5432:5432"
     networks:
       - custom
-  db_test:
-    container_name: "db_test"
-    image: postgres:14.1-alpine
-    restart: always
-    environment:
-      - POSTGRES_USER=postgres_test
-      - POSTGRES_PASSWORD=postgres_test
-      - POSTGRES_DB=postgres_test
+
+  web:
+    build: .
+    container_name: "web"
+    command: uvicorn main:app --reload --workers 1 --host 0.0.0.0 --port 8888
+    volumes:
+      - .:/usr/src/
     ports:
-      - "5433:5432"
-    networks:
-      - custom
+      - "8888:8888"
+    environment:
+      - DATABASE_URL=postgresql+asyncpg://postgres:postgres@127.0.0.1:5432/postgres
+      - TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3MTg3MjE2NzIsImlzcyI6ImZhYnJpcXVlIiwibmFtZSI6Imh0dHBzOi8vdC5tZS9wdXBzc3Nzc3NzIn0.1nj34EfEwLKj1s5jc5mA9nUpSjCj4NDvMbxs1IWx3CU
+      - APP_PORT=80
+    depends_on:
+      - db
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+      - "9000:9090"
+    volumes:
+      - ./prometheus_data/prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
+
+volumes:
+  prometheus_data:
+    driver: local
+    driver_opts:
+      o: bind
+      type: none
+      device: ./prometheus_data
+  grafana_data:
+    driver: local
+    driver_opts:
+      o: bind
+      type: none
+      device: ./grafana_data
+  postgres_data:
+
 networks:
   custom:
     driver: bridge
